--- a/style.css
+++ b/style.css
@@ -1334,8 +1334,8 @@ img,
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100%;
-  height: 100%;
+  width: 50px;
+  aspect-ratio: 1/1 !important;
   border-radius: 50%;
   transition: all 0.4s linear;
   border: 1px solid var(--secondary);
@@ -1539,6 +1539,15 @@ img,
 @media screen and (max-width: 692px) {
   * {
     scroll-margin-top: 80px;
+  }
+
+  .social .social-icon-elem {
+    width: 40px !important;
+    height: 40px;
+  }
+
+  #side-nav {
+    display: none;
   }
 
   .contact-section {
@@ -2757,17 +2766,17 @@ img,
           backdrop-filter: blur(5px);
   width: 100%;
   left: 0;
-  top: 100%;
+  bottom: -80%;
   opacity: 0;
   pointer-events: none;
   z-index: 5;
   padding: 15px 30px;
   border-radius: 15px;
   box-shadow: 0px -5px 10px var(--shadow-color);
-  transition: all 0.15s ease-out;
+  transition: all 350ms ease-out !important;
 }
 .music-list.show {
-  top: 45%;
+  bottom: -22px;
   opacity: 1;
   pointer-events: auto;
 }
