--- a/style.scss
+++ b/style.scss
@@ -572,6 +572,65 @@ img,
     display: flex;
     justify-content: center;
     align-items: center;
+    .box {
+      width: min(100% - 2rem, 60rem);
+      aspect-ratio: 1 / 1;
+      border: 1px solid var(--accent-color);
+      border-radius: 8px;
+      position: relative;
+      .icon {
+        opacity: 0.2;
+        width: 20%;
+        position: absolute;
+        &:hover {
+          opacity: 0.7;
+          svg {
+            fill: var(--accent-color);
+            filter: drop-shadow(0px 0px 5px var(--accent-color));
+          }
+        }
+        &-js {
+          bottom: 1%;
+          left: 4%;
+          transform: rotate(-27deg);
+        }
+        &-css {
+          bottom: 1%;
+          right: 10%;
+          transform: rotate(27deg);
+        }
+        &-sass {
+          bottom: 24%;
+          left: 48%;
+          transform: rotate(-39deg) scale(1.5);
+        }
+        &-react {
+          top: 4%;
+          left: 4%;
+          transform: rotate(-52deg);
+        }
+        &-code {
+          top: 16%;
+          right: 6%;
+          transform: rotate(40deg) scale(1.5);
+        }
+        &-coding {
+          top: 30%;
+          left: 16%;
+          transform: rotate(41deg);
+        }
+        &-branch {
+          top: 3%;
+          left: 40%;
+          transform: rotate(0deg);
+        }
+        &-cmd {
+          bottom: 29%;
+          left: 4%;
+          transform: rotate(0deg);
+        }
+      }
+    }
     img {
       outline: 1px solid var(--accent-color);
       padding: 30px;
