--- a/style.scss
+++ b/style.scss
@@ -582,6 +582,8 @@ img,
         opacity: 0.2;
         width: 20%;
         position: absolute;
+        transition: all 200ms ease-in-out;
+
         &:hover {
           opacity: 0.7;
           svg {
