--- a/style.scss
+++ b/style.scss
@@ -999,6 +999,13 @@ img,
           }
         }
       }
+      &:nth-child(10) {
+        .flip-card-front {
+          .img {
+            background-image: url(./react-multi-step-form.PNG);
+          }
+        }
+      }
 
       .flip-card-grid {
         position: relative;
