--- a/style.scss
+++ b/style.scss
@@ -1464,6 +1464,76 @@ img,
   height: min(120px, 30vw);
   height: max-content;
 }
+.more-social-links-wrapper {
+  position: fixed;
+  height: 100vh;
+  width: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 100;
+  background-color: var(--navbar-color);
+  backdrop-filter: blur(5px);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 100px;
+  transform: scale(0);
+  opacity: 0;
+  transition: 300ms linear;
+  color: var(--text);
+  button {
+    padding: 10px 20px;
+    position: absolute;
+    background-color: var(--accent-color);
+    top: 20px;
+    right: 20px;
+    color: var(--secondary);
+    user-select: none;
+    &:hover {
+      filter: brightness(80%);
+      cursor: pointer;
+    }
+  }
+  nav {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    // padding-left: 0;
+    position: static;
+    width: 100%;
+    margin: 0 auto;
+    ul {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-wrap: wrap;
+      list-style: none;
+      gap: 50px;
+      li {
+        transition: 200ms linear;
+        &:hover {
+          transform: scale(1.3);
+        }
+        .social-icon-elem {
+          border-radius: 0px;
+          width: 60px;
+          height: 60px;
+
+          svg {
+            fill: var(--text);
+          }
+        }
+      }
+    }
+  }
+  &.open {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
 #toggle-social {
   position: fixed;
   width: 25px;
