--- a/style.scss
+++ b/style.scss
@@ -1488,6 +1488,7 @@ img,
     padding: 10px 20px;
     position: absolute;
     background-color: var(--accent-color);
+    border: none;
     top: 20px;
     right: 20px;
     color: var(--secondary);
@@ -1501,7 +1502,6 @@ img,
     display: flex;
     justify-content: center;
     align-items: center;
-    // padding-left: 0;
     position: static;
     width: 100%;
     margin: 0 auto;
