--- a/style.css
+++ b/style.css
@@ -503,6 +503,16 @@ img,
   position: relative;
   -webkit-animation: slide-in-right 0.8s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
           animation: slide-in-right 0.8s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+  overflow: hidden;
+}
+#about .bg-text {
+  position: absolute;
+  font-size: 25rem;
+  left: 0;
+  z-index: -1;
+  font-weight: 700;
+  opacity: 0.03;
+  transform: rotate(30deg);
 }
 #about p {
   font-size: 1rem;
@@ -523,6 +533,16 @@ img,
   border-radius: 12px;
   color: var(--text);
   box-shadow: 0px 0px 10px var(--shadow-color);
+}
+.homeclass .bg-text {
+  position: absolute;
+  font-size: 25rem;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  font-weight: 700;
+  opacity: 0.015;
+  transform: rotate(-10deg);
 }
 .homeclass .left {
   width: 50%;
@@ -653,6 +673,7 @@ img,
   box-shadow: 0px 0px 10px var(--shadow-color);
   -webkit-animation: slide-out-right 1s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
           animation: slide-out-right 1s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+  overflow: hidden;
 }
 .page .slide-in .slide .caret {
   color: var(--accent-color);
@@ -698,6 +719,20 @@ img,
   border: 1px solid var(--accent-color);
   color: var(--accent-color);
   cursor: pointer;
+}
+
+#skills {
+  overflow: hidden;
+}
+#skills .bg-text {
+  position: absolute;
+  font-size: 25rem;
+  top: 0px;
+  left: 0;
+  z-index: -1;
+  font-weight: 700;
+  opacity: 0.03;
+  transform: rotate(-10deg);
 }
 
 .skills-section {
@@ -843,6 +878,15 @@ img,
 }
 .work-container ::-webkit-scrollbar {
   width: 8px;
+}
+.work-container .bg-text {
+  position: absolute;
+  font-size: 25rem;
+  top: -50%;
+  z-index: -1;
+  font-weight: 700;
+  opacity: 0.03;
+  transform: rotate(10deg);
 }
 .work-container .cards {
   display: flex;
@@ -1156,15 +1200,15 @@ img,
 .contact {
   padding: 20px 0 !important;
 }
-.contact .background-text {
+.contact .bg-text {
   position: absolute;
-  font-size: 10rem;
-  line-height: 0.9;
-  -ms-writing-mode: tb-rl;
-      writing-mode: vertical-rl;
-  text-orientation: mixed;
-  opacity: 0.4;
-  color: var(--accent-color);
+  font-size: 18rem;
+  left: 0;
+  top: 50px;
+  z-index: -1;
+  font-weight: 700;
+  opacity: 0.03;
+  transform: rotate(30deg);
   -webkit-user-select: none;
      -moz-user-select: none;
       -ms-user-select: none;
