--- a/style.scss
+++ b/style.scss
@@ -20,15 +20,21 @@
   font-family: "Poppins", sans-serif;
   scroll-margin-top: 100px;
 }
+html {
+  background-color: var(--elem-color);
+}
 body {
-  height: 200vh;
-  background-color: var(--primary);
   transition: 200ms linear;
+  background-color: var(--primary);
 }
 img,
 .material-icons,
 .navbar {
   user-select: none;
+}
+.bg-text {
+  user-select: none;
+  pointer-events: none;
 }
 ::selection {
   color: var(--primary);
@@ -47,8 +53,9 @@ img,
   position: fixed;
   font-size: 10rem;
   .doors {
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    left: 0;
+    height: 100vh;
     display: flex;
     flex-direction: row;
     .left-side {
@@ -59,7 +66,7 @@ img,
       border-top: 1px solid var(--accent-color);
     }
     .right-side {
-      // right dor
+      // right door
       background-color: var(--elem-color);
       height: 100%;
       width: 50%;
@@ -1530,6 +1537,7 @@ img,
     }
   }
 }
+
 .social-icons-container {
   top: calc(50vh - 120px);
   position: fixed;
