--- a/style.css
+++ b/style.css
@@ -546,6 +546,9 @@ img,
   color: var(--text);
   box-shadow: 0px 0px 10px var(--shadow-color);
 }
+.homeclass a {
+  text-decoration: none;
+}
 .homeclass .bg-text {
   position: absolute;
   font-size: 25rem;
@@ -561,7 +564,59 @@ img,
   min-height: 70px;
   display: flex;
   justify-content: center;
-  align-items: center;
+  flex-direction: column;
+}
+.homeclass .left .call-to-action-buttons {
+  display: flex;
+  gap: 20px;
+  margin-block: 20px;
+  flex-wrap: wrap;
+}
+.homeclass .left .call-to-action-buttons.done .btn-primary {
+  display: block;
+  -webkit-animation-delay: 500ms !important;
+          animation-delay: 500ms !important;
+  -webkit-animation: scale-in-center 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+          animation: scale-in-center 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+}
+.homeclass .left .call-to-action-buttons.done .btn-primary:hover {
+  cursor: pointer;
+  background-color: transparent;
+  color: var(--accent-color);
+  box-shadow: 0px 0px 10px var(--accent-color);
+  text-shadow: 0px 0px 10px var(--accent-color);
+}
+.homeclass .left .call-to-action-buttons.done .btn-secondary {
+  display: block;
+  -webkit-animation-delay: 1000ms !important;
+          animation-delay: 1000ms !important;
+  -webkit-animation: scale-in-center 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+          animation: scale-in-center 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+}
+.homeclass .left .call-to-action-buttons.done .btn-secondary:hover {
+  background-color: var(--accent-color);
+  color: var(--primary);
+  box-shadow: 0px 0px 10px var(--accent-color);
+}
+.homeclass .left .call-to-action-buttons .btn-primary {
+  transition: 300ms linear;
+  color: var(--primary);
+  background-color: var(--accent-color);
+  border: 1px solid var(--accent-color);
+  padding: 10px 20px;
+  border-radius: 8px;
+  opacity: 0;
+  display: none;
+}
+.homeclass .left .call-to-action-buttons .btn-secondary {
+  transition: 300ms linear;
+  opacity: 0;
+  cursor: pointer;
+  color: var(--accent-color);
+  border: 1px solid var(--accent-color);
+  padding: 10px 20px;
+  border-radius: 8px;
+  display: none;
 }
 .homeclass .right {
   width: 50%;
@@ -2212,6 +2267,26 @@ img,
 
   .work-container {
     flex-direction: column-reverse !important;
+  }
+}
+@-webkit-keyframes scale-in-center {
+  0% {
+    transform: scale(0);
+    opacity: 1;
+  }
+  100% {
+    transform: scale(1);
+    opacity: 1;
+  }
+}
+@keyframes scale-in-center {
+  0% {
+    transform: scale(0);
+    opacity: 1;
+  }
+  100% {
+    transform: scale(1);
+    opacity: 1;
   }
 }
 @-webkit-keyframes transform-and-glow {
