--- a/style.scss
+++ b/style.scss
@@ -577,6 +577,9 @@ img,
   border-radius: 12px;
   color: var(--text);
   box-shadow: 0px 0px 10px var(--shadow-color);
+  a {
+    text-decoration: none;
+  }
   .bg-text {
     position: absolute;
     font-size: 25rem;
@@ -592,7 +595,59 @@ img,
     min-height: 70px;
     display: flex;
     justify-content: center;
-    align-items: center;
+    flex-direction: column;
+    .call-to-action-buttons {
+      display: flex;
+      gap: 20px;
+      margin-block: 20px;
+      flex-wrap: wrap;
+      &.done {
+        .btn-primary {
+          display: block;
+          animation-delay: 500ms !important;
+          animation: scale-in-center 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94)
+            both;
+          &:hover {
+            cursor: pointer;
+            background-color: transparent;
+            color: var(--accent-color);
+            box-shadow: 0px 0px 10px var(--accent-color);
+            text-shadow: 0px 0px 10px var(--accent-color);
+          }
+        }
+        .btn-secondary {
+          display: block;
+          animation-delay: 1000ms !important;
+          animation: scale-in-center 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94)
+            both;
+          &:hover {
+            background-color: var(--accent-color);
+            color: var(--primary);
+            box-shadow: 0px 0px 10px var(--accent-color);
+          }
+        }
+      }
+      .btn-primary {
+        transition: 300ms linear;
+        color: var(--primary);
+        background-color: var(--accent-color);
+        border: 1px solid var(--accent-color);
+        padding: 10px 20px;
+        border-radius: 8px;
+        opacity: 0;
+        display: none;
+      }
+      .btn-secondary {
+        transition: 300ms linear;
+        opacity: 0;
+        cursor: pointer;
+        color: var(--accent-color);
+        border: 1px solid var(--accent-color);
+        padding: 10px 20px;
+        border-radius: 8px;
+        display: none;
+      }
+    }
   }
   .right {
     width: 50%;
@@ -2315,6 +2370,30 @@ img,
 /////////////////////////////////////////////////////////////////////////////////////////////////////////
 ///////////////////////////////////// Animations ////////////////////////////////////////////////////////
 /////////////////////////////////////////////////////////////////////////////////////////////////////////
+@-webkit-keyframes scale-in-center {
+  0% {
+    -webkit-transform: scale(0);
+    transform: scale(0);
+    opacity: 1;
+  }
+  100% {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+    opacity: 1;
+  }
+}
+@keyframes scale-in-center {
+  0% {
+    -webkit-transform: scale(0);
+    transform: scale(0);
+    opacity: 1;
+  }
+  100% {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+    opacity: 1;
+  }
+}
 @keyframes transform-and-glow {
   0% {
     transform: scaleY(0);
