--- a/style.css
+++ b/style.css
@@ -1842,6 +1842,7 @@ img,
 
   .contact-section {
     flex-direction: column;
+    gap: 30px;
   }
   .contact-section form input {
     height: 40px;
@@ -1851,6 +1852,9 @@ img,
   }
   .contact-section form textarea {
     height: 150px;
+  }
+  .contact-section .contact-info h1 {
+    padding-bottom: 0px !important;
   }
 
   .background-text {
@@ -1886,6 +1890,11 @@ img,
   }
   .homeclass .left {
     width: 100%;
+    padding-inline: 20px;
+    gap: 0;
+  }
+  .homeclass .left #message {
+    padding-bottom: 0px;
   }
   .homeclass .right {
     width: 100%;
