--- a/style.css
+++ b/style.css
@@ -219,7 +219,8 @@ img,
 .navbar {
   width: 100%;
   height: 80px;
-  bottom: calc(100% - 80px);
+  top: 0;
+  bottom: auto;
   box-shadow: 0px 0px 10px var(--shadow-color);
   position: fixed;
   z-index: 10;
@@ -1966,6 +1967,7 @@ img,
     margin-top: 40px;
   }
   body .navbar {
+    top: auto;
     bottom: 0;
     border-radius: 0;
     z-index: 100 !important;
