--- a/style.scss
+++ b/style.scss
@@ -203,7 +203,8 @@ img,
   // top navbar
   width: 100%;
   height: 80px;
-  bottom: calc(100% - 80px);
+  top: 0;
+  bottom: auto;
   box-shadow: 0px 0px 10px var(--shadow-color);
   position: fixed;
   z-index: 10;
@@ -2077,6 +2078,7 @@ img,
       margin-top: 40px;
     }
     .navbar {
+      top: auto;
       bottom: 0;
       border-radius: 0;
       z-index: 100 !important;
