--- a/timeline/timeline.css
+++ b/timeline/timeline.css
@@ -34,6 +34,7 @@ body {
 button {
   position: fixed;
   top: 0;
+  bottom: auto;
   right: 0;
   z-index: 10;
   padding: 8px 10px;
@@ -197,7 +198,8 @@ button:hover {
 }
 @media screen and (max-width: 470px) {
   button {
-    top: calc(100% - 45px);
+    top: auto;
+    bottom: 0;
   }
   button:hover {
     filter: brightness(0.8);
